tests/ui/wf/wf-in-obj-type-static.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-in-obj-type-static.rs:14:8
   |
LL |     x: dyn Object<&'static T>
   |        ^^^^^^^^^^^^^^^^^^^^^^
   |        |
   |        the parameter type `T` must be valid for the static lifetime...
   |        ...so that the reference type `&'static T` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound
   |
LL | struct Foo<T: 'static> {
   |             +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
